# nlp_demo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/nlp_demo/: __init__.py  interface.py  model.py  question_answering.py  summarization.py
